--- a/Basics/Exam.Tests/Exam.Tests.csproj
+++ b/Basics/Exam.Tests/Exam.Tests.csproj
@@ -51,6 +51,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ArraysTests.cs" />
+    <Compile Include="DoubleLinkedList.cs" />
+    <Compile Include="LinkedList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Choose>
